--- a/source/catalog.html
+++ b/source/catalog.html
@@ -144,7 +144,7 @@
             <div class="good__info-container">
             <h2 class="good__title"><a>Большая корзинка для&nbsp;игрушек</a></h2>
               <p class="good__description">Диаметр 30 см, высота 30 см</p>
-              <p class="good__bottom">
+              <p class="good__bottom good__bottom--toys-cart">
                 <span class="good__price">1 500 руб.</span>
                 <a class="good__cart" href="#modal-form">
                   <svg class="good__cart-icon" width="18" height="19"><use xlink:href="#icon-cart"></use></svg>
