--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,8 +41,8 @@
     <header class="main-header">
       <a href="index.html" class="main-header__logo">
         <picture>
-          <source media="(min-width: 1050px)" srcset="img/logo-desktop.svg" width="149px" height="89px" >
-          <source media="(min-width: 668px)" srcset="img/logo-tablet.svg" width="113px" height="46px">
+          <source media="(min-width: 1050px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 668px)" srcset="img/logo-tablet.svg">
           <img class="main-header__logo-image" src="img/logo-mobile.svg"  alt="Магазин &laquo;Мишка&raquo;">
         </picture>
       </a>
@@ -53,7 +53,7 @@
         <div class="main-nav__wrapper">
             <ul class="main-nav__list site-nav">
               <li class="site-nav__item">
-                <a href="">Каталог товаров</a>
+                <a>Каталог товаров</a>
               </li>
               <li class="site-nav__item">
                 <a href="form.html">Вязание на заказ</a>
@@ -102,7 +102,7 @@
               </picture>
              </a>
             <div class="good__info-container">
-              <h2 class="good__title"><a>Зайчик-попрыгайчик</a></h2>
+              <h2 class="good__title"><a href="">Зайчик-попрыгайчик</a></h2>
               <p class="good__description">Рост 30 см, вес 200 г</p>
               <p class="good__bottom">
                 <span class="good__price">1 200 руб.</span>
@@ -122,7 +122,7 @@
               </picture>
             </a>
             <div class="good__info-container">
-              <h2 class="good__title"><a>Корзинка для белья</a></h2>
+              <h2 class="good__title"><a href="">Корзинка для белья</a></h2>
               <p class="good__description">Диаметр 15 см, высота 10 см</p>
               <p class="good__bottom">
                 <span class="good__price">690 руб.</span>
@@ -142,7 +142,7 @@
               </picture>
             </a>
             <div class="good__info-container">
-            <h2 class="good__title"><a>Большая корзинка для&nbsp;игрушек</a></h2>
+            <h2 class="good__title"><a href="">Большая корзинка для&nbsp;игрушек</a></h2>
               <p class="good__description">Диаметр 30 см, высота 30 см</p>
               <p class="good__bottom good__bottom--toys-cart">
                 <span class="good__price">1 500 руб.</span>
@@ -186,33 +186,33 @@
           <ul class="main-footer__social social-list">
             <li class="social-list__item">
               <a class="social-list__link" href="">
-                <svg class="main-footer__social-logo main-footer__social-logo--insta" width="22" height="21"><use xlink:href="#footer-instagram"></use></svg>
+                <svg class="social-list__social-logo social-list__social-logo--insta" width="22" height="21"><use xlink:href="#footer-instagram"></use></svg>
                 <span class="visually-hidden">Instagram</span>
               </a>
             </li>
             <li class="social-list__item">
               <a class="social-list__link" href="">
-                <svg class="main-footer__social-logo main-footer__social-logo--fb" width="15" height="28"><use xlink:href="#footer-facebook"></use></svg>
+                <svg class="social-list__social-logo social-list__social-logo--fb" width="15" height="28"><use xlink:href="#footer-facebook"></use></svg>
                 <span class="visually-hidden">Facebook</span>
               </a>
             </li>
             <li class="social-list__item">
               <a class="social-list__link" href="">
-                <svg class="main-footer__social-logo main-footer__social-logo--twitt" width="23" height="20"><use xlink:href="#footer-twitter"></use></svg>
+                <svg class="social-list__social-logo social-list__social-logo--twitt" width="23" height="20"><use xlink:href="#footer-twitter"></use></svg>
                 <span class="visually-hidden">Twitter</span>
               </a>
             </li>
           </ul>
-          <a class="main-footer__copyright copyright">
+          <a class="main-footer__copyright copyright" href="https://htmlacademy.ru/intensive/adaptive">
             <p class="copyrgiht__creator">Разработано</p>
-            <div class="copyright__logo" href="#">
-              <svg class="copyright__logo-img" width="27" height="34"><use xlink:href="#footer-htmlacademy" alt="HtmlAcademy"></use></svg>
+            <div class="copyright__logo">
+              <svg class="copyright__logo-img" width="27" height="34"><use xlink:href="#footer-htmlacademy"></use></svg>
             </div>
           </a>
         </div>
       </div>
     </footer>
-<div class="overlay">
+    <div class="overlay">
       <section class="modal-add-item">
         <form class="modal-add-item__form" id="size-form" method="get" action="https://echo.htmlacademy.ru">
         <h2 class="modal-add-item__title">Добавить в корзину</h2>
