--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>HTML Academy: Мишка</title>
     <link rel="stylesheet" href="css/style.css">
-
   </head>
   <body>
     <svg style="display:none">
@@ -90,8 +89,8 @@
     <header class="main-header main-header--index">
       <a class="main-header__logo">
         <picture>
-          <source media="(min-width: 1050px)" srcset="img/logo-desktop.svg" width="149px" height="89px" >
-          <source media="(min-width: 668px)" srcset="img/logo-tablet.svg" width="113px" height="46px">
+          <source media="(min-width: 1050px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 668px)" srcset="img/logo-tablet.svg">
           <img class="main-header__logo-image" src="img/logo-mobile.svg"  alt="Магазин &laquo;Мишка&raquo;">
         </picture>
       </a>
@@ -195,8 +194,8 @@
           </div>
           <div class="weekly-goods__image-contaner">
             <picture>
-              <source media="(min-width: 1050px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x" width="525px" height="636px">
-              <source media="(min-width: 668px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x" width="333px" height="404px" >
+              <source media="(min-width: 1050px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
+              <source media="(min-width: 668px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
               <img class="weekly-goods__image" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Товар недели: корзинка">
             </picture>
           </div>
@@ -302,27 +301,27 @@
           <ul class="main-footer__social social-list">
             <li class="social-list__item">
               <a class="social-list__link" href="">
-                <svg class="main-footer__social-logo main-footer__social-logo--insta" width="22" height="21"><use xlink:href="#footer-instagram"></use></svg>
+                <svg class="social-list__social-logo social-list__social-logo--insta" width="22" height="21"><use xlink:href="#footer-instagram"></use></svg>
                 <span class="visually-hidden">Instagram</span>
               </a>
             </li>
             <li class="social-list__item">
               <a class="social-list__link" href="">
-                <svg class="main-footer__social-logo main-footer__social-logo--fb" width="15" height="28"><use xlink:href="#footer-facebook"></use></svg>
+                <svg class="social-list__social-logo social-list__social-logo--fb" width="15" height="28"><use xlink:href="#footer-facebook"></use></svg>
                 <span class="visually-hidden">Facebook</span>
               </a>
             </li>
             <li class="social-list__item">
               <a class="social-list__link" href="">
-                <svg class="main-footer__social-logo main-footer__social-logo--twitt" width="23" height="20"><use xlink:href="#footer-twitter"></use></svg>
+                <svg class="social-list__social-logo social-list__social-logo--twitt" width="23" height="20"><use xlink:href="#footer-twitter"></use></svg>
                 <span class="visually-hidden">Twitter</span>
               </a>
             </li>
           </ul>
-          <a class="main-footer__copyright copyright">
+          <a class="main-footer__copyright copyright" href="https://htmlacademy.ru/intensive/adaptive">
             <p class="copyrgiht__creator">Разработано</p>
-            <div class="copyright__logo" href="#">
-              <svg class="copyright__logo-img" width="27" height="34"><use xlink:href="#footer-htmlacademy" alt="HtmlAcademy"></use></svg>
+            <div class="copyright__logo">
+              <svg class="copyright__logo-img" width="27" height="34"><use xlink:href="#footer-htmlacademy"></use></svg>
             </div>
           </a>
         </div>
@@ -351,8 +350,7 @@
         </form>
       </section>
     </div>
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=<227779b2-ff5d-4304-bc15-fc57e93a93e0>&lang=ru_RU" type="text/javascript">
-    </script>
+    <script  src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
