--- a/source/catalog.html
+++ b/source/catalog.html
@@ -82,7 +82,7 @@
               <p class="good__description">Рост 30 см, вес 200 г</p>
               <p class="good__bottom">
                 <span class="good__price">1 200 руб.</span>
-                <a class="good__cart popup--show" href="#modal-form">
+                <a class="good__cart good__btn" href="#modal-form">
                   <svg class="good__cart-icon" width="18" height="19"><use xlink:href="#icon-cart"></use></svg>
                   <span class="visually-hidden">В корзину</span>
                 </a>
@@ -105,7 +105,7 @@
               <p class="good__description">Диаметр 15 см, высота 10 см</p>
               <p class="good__bottom">
                 <span class="good__price">690 руб.</span>
-                <a class="good__cart popup--show" href="#modal-form">
+                <a class="good__cart good__btn" href="#modal-form">
                   <svg class="good__cart-icon" width="18" height="19"><use xlink:href="#icon-cart"></use></svg>
                   <span class="visually-hidden">В корзину</span>
                 </a>
@@ -128,7 +128,7 @@
               <p class="good__description good__description--toys-cart">Диаметр 30 см, высота 30 см</p>
               <p class="good__bottom good__bottom--toys-cart">
                 <span class="good__price">1 500 руб.</span>
-                <a class="good__cart popup--show" href="#modal-form">
+                <a class="good__cart good__btn" href="#modal-form">
                   <svg class="good__cart-icon" width="18" height="19"><use xlink:href="#icon-cart"></use></svg>
                   <span class="visually-hidden">В корзину</span>
                 </a>
@@ -159,7 +159,7 @@
           По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том,
           как появляются наши товары.
         </p>
-        <a class="production__btn btn popup--show" href="#modal-form">Сделать заказ</a>
+        <a class="production__btn btn good__btn" href="#modal-form">Сделать заказ</a>
       </section>
     </main>
     <footer class="main-footer">
@@ -198,25 +198,25 @@
       </div>
     </footer>
     <div class="overlay"></div>
-    <section class="modal-add-item">
-      <form class="modal-add-item__form" id="size-form" method="get" action="https://echo.htmlacademy.ru">
-      <h2 class="modal-add-item__title">Добавить в корзину</h2>
-      <p class="modal-add-item__size-title">Выберите размер:</p>
-      <ul class="modal-add-item__select size-list">
-        <li class="modal-add-item__item">
+    <section class="modal">
+      <form class="modal__form" id="size-form" method="get" action="https://echo.htmlacademy.ru">
+      <h2 class="modal__title">Добавить в корзину</h2>
+      <p class="modal__size-title">Выберите размер:</p>
+      <ul class="modal__select size-list">
+        <li class="modal__item">
           <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-S" id="s-size-add" checked="">
           <label class="size-list__label" for="s-size-add">S</label>
         </li>
-        <li class="modal-add-item__item">
+        <li class="modal__item">
           <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-M" id="m-size-add">
           <label class="size-list__label" for="m-size-add">M</label>
         </li>
-        <li class="modal-add-item__item">
+        <li class="modal__item">
           <input class="size-list__radio visually-hidden" type="radio" name="size-radio" value="size-L" id="l-size-add">
           <label class="size-list__label" for="l-size-add">L</label>
         </li>
       </ul>
-      <button class="modal-add-item__btn btn" form="size-form" type="submit">Добавить</button>
+      <button class="modal__btn btn" form="size-form" type="submit">Добавить</button>
       </form>
     </section>
     <script type="text/javascript" src="js/script.js"></script>
