--- a/source/index.html
+++ b/source/index.html
@@ -69,15 +69,13 @@
         <p class="directions__info">Милые штуки ручной работы&nbsp;для дома</p>
         <ul class="directions__list">
           <li class="directions__item">
-            <a class="directions__link" href="">
+            <a class="directions__link directions__link--interior" href="">
               <span>Предметы интерьера</span>
-              <span><svg class="directions__icon directions__icon--interior" width="40" height="62"><use xlink:href="#icon-interior"></use></svg></span>
             </a>
           </li>
           <li class="directions__item">
-            <a class="directions__link" href="">
+            <a class="directions__link directions__link--toy" href="">
               <span>Детские игрушки</span>
-              <span><svg class="directions__icon directions__icon--toy" width="60" height="60"><use xlink:href="#icon-toy"></use></svg></span>
             </a>
           </li>
         </ul>
